--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,17 @@
 spring:
   #数据库
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/dispatcher?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
-    password: Mysql1114
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 #    initialization-mode: always
   jpa:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+  thymeleaf:
+    cache: false
   #邮箱
   mail:
     host: smtp.163.com
