实现了jwt，但对于现在的项目没有卵用。。。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,14 @@ mail:
   fromMail:
     addr: dispatchertest@163.com
 
+# 自定义jwt key
+jwt:
+  tokenHeader: Authorization #JWT存储的请求头
+  secret: mySecret #JWT加解密使用的密钥
+  expiration: 604800 #JWT的超期限时间(60*60*24)
+  tokenHead: Bearer  #JWT负载中拿到开头
+
+
 #自定义的变量
 dispatcher:
   task:
