--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,16 +26,6 @@ spring:
           ssl:
             enable: true
 
-mail:
-  fromMail:
-    addr: dispatchertest@163.com
-
-# 自定义jwt key
-jwt:
-  tokenHeader: Authorization #JWT存储的请求头
-  secret: mySecret #JWT加解密使用的密钥
-  expiration: 604800 #JWT的超期限时间(60*60*24)
-  tokenHead: Bearer  #JWT负载中拿到开头
 
 
 #自定义的变量
@@ -45,6 +35,11 @@ dispatcher:
     fileRootPathWIN: D:/dispatcher/file
   employee:
     pageSize: 20
+  commit:
+    root: D:/
+  mail:
+    fromMail:
+      addr: dispatchertest@163.com
 
 server:
   port: 8080
